# openrag

./: .coverage  .dockerignore  .env.example  .gitignore  404.html  CONTRIBUTING.md  DEV-README.md  DEVELOPMENT.md  Dockerfile  Dockerfile.app  Dockerfile.backend  Dockerfile.frontend  Dockerfile.init-ui  Dockerfile.langflow  FIRST_RUN_SETUP.md  Makefile  README.md  TESTING_QUICKSTART.md  config.yaml  coverage.xml  docker-compose-cpu.yml  docker-compose-dev.yml  docker-compose.yml  index.html  pyproject.toml  pytest.ini  sitemap.xml  warm_up_docling.py
.github/: BRANCH_PROTECTION_GUIDE.md
.github/workflows/: build-langflow-responses.yml  tests.yml  (+6 more)
agents/: index.html
config/: config.example.yaml
docs/: .gitignore  README.md  VERSIONING_SETUP.md  configuration.md  docker.md  docusaurus.config.js  generate-pdf-ci.js  package-lock.json  package.json  scraper.config.json  sidebars.js  troubleshooting.md  tui.md
flows/: gendb_agent.json  ingestion_flow.json  openrag_agent.json  openrag_ingest_docling.json  openrag_nudges.json  openrag_url_mcp.json
frontend/: components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ingestion/: index.html
install/: index.html
knowledge/: index.html
quickstart/: index.html
scripts/: docling_ctl.py  extract_flow_component.py  migrate_embedding_model_field.py  update_flow_components.py
securityconfig/: internal_users.yml  roles.yml
src/: agent.py  app.py  auth_middleware.py  main.py  session_manager.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py
(+535 files in other folders)
